--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy to ECS
 
 on:
   push:
-    branches: [main, dev]
+    branches:
+        - main
 
 permissions:
   id-token: write  # Required for requesting the JWT from GitHub OIDC
@@ -21,8 +22,9 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-role
-          aws-region: ***
+          aws-region: ap-southeast-1
           audience: sts.amazonaws.com
+          unset-current-credentials: true
 
       # Login ไป Amazon ECR
       - name: Login to Amazon ECR
