--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,45 @@ jobs:
           aws-region: ap-southeast-1
           audience: sts.amazonaws.com
           unset-current-credentials: true
+      - name: Generate Task Definition
+        run: |
+          cat > task-definition.json <<EOF
+          {
+            "family": "my-web-app-task",
+            "cpu": "256",
+            "memory": "512",
+            "networkMode": "awsvpc",
+            "requiresCompatibilities": ["FARGATE"],
+            "executionRoleArn": "arn:aws:iam::<AWS_ACCOUNT_ID>:role/ECSTaskExecutionRole",
+            "containerDefinitions": [
+              {
+                "name": "my-web-app-container",
+                "image": "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-web-app-repo:${{ github.sha }}",
+                "portMappings": [
+                  {
+                    "containerPort": 3000,
+                    "protocol": "tcp"
+                  }
+                ],
+                "essential": true,
+                "logConfiguration": {
+                  "logDriver": "awslogs",
+                  "options": {
+                    "awslogs-group": "/ecs/my-web-app",
+                    "awslogs-region": "${{ secrets.AWS_REGION }}",
+                    "awslogs-stream-prefix": "ecs"
+                  }
+                }
+              }
+            ]
+          }
+          EOF
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+
+      - name: Register Task Definition
+        run: aws ecs register-task-definition --cli-input-json file://config/task-definition.json
 
       # Login ไป Amazon ECR
       - name: Login to Amazon ECR
