--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,13 @@ jobs:
       - name: Build, tag, and push Docker image to Amazon ECR
         run: |
           docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
-          aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
-          docker tag ${{ secrets.ECR_REPOSITORY }}:latest ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
-          docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
+          docker push ${{ secrets.ECR_REPOSITORY }}:latest
 
       - name: Export Docker image to tar and upload to S3
         run: |
           docker pull ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
-          docker save ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest | gzip | aws s3 cp - s3://my-node-app-artifacts/my-node-app-latest.tar.gz
+          docker save ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest | gzip | aws s3 cp - s3://my-node-app-artifacts-${{ secrets.AWS_ACCOUNT_ID }}/my-node-app-latest.tar.gz
 
       - name: Generate Dockerrun.aws.json
         run: |
@@ -65,14 +64,14 @@ jobs:
           }
           EOF
           zip dockerrun.zip Dockerrun.aws.json
-          aws s3 cp dockerrun.zip s3://my-node-app-artifacts/dockerrun.zip
+          aws s3 cp dockerrun.zip s3://my-node-app-artifacts-${{ secrets.AWS_ACCOUNT_ID }}/dockerrun.zip
 
       - name: Deploy to Elastic Beanstalk
         run: |
           aws elasticbeanstalk create-application-version \
             --application-name my-node-app \
             --version-label v${{ github.sha }} \
-            --source-bundle S3Bucket=my-node-app-artifacts,S3Key=dockerrun.zip \
+            --source-bundle S3Bucket=my-node-app-artifacts-${{ secrets.AWS_ACCOUNT_ID }},S3Key=dockerrun.zip \
             --region ${{ secrets.AWS_REGION }}
           aws elasticbeanstalk update-environment \
             --application-name my-node-app \
