--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,11 +70,11 @@ jobs:
         run: |
           aws elasticbeanstalk create-application-version \
             --application-name my-node-app \
-            --version-label v${{ github.sha }} \
+            --version-label v${{ github.run_number }}-${{ github.sha }} \
             --source-bundle S3Bucket=my-node-app-artifacts-${{ secrets.AWS_ACCOUNT_ID }},S3Key=dockerrun.zip \
-            --region ${{ secrets.AWS_REGION }}
+            --region ${{ secrets.AWS_REGION }} || exit 1
           aws elasticbeanstalk update-environment \
             --application-name my-node-app \
             --environment-name my-node-env \
-            --version-label v${{ github.sha }} \
-            --region ${{ secrets.AWS_REGION }}
+            --version-label v${{ github.run_number }}-${{ github.sha }} \
+            --region ${{ secrets.AWS_REGION }} || exit 1
