Update github workflows and docker files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS ECS 
+name: Deploy to AWS ECR 
 
 on:
   push:
@@ -26,4 +26,5 @@ jobs:
           docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
           aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
           docker push ${{ secrets.ECR_REPOSITORY }}:latest
+  
   
